--- a/jp/classes/stat2/contents/R/r-markdown.Rmd
+++ b/jp/classes/stat2/contents/R/r-markdown.Rmd
@@ -234,7 +234,7 @@ plot(x, y)
 
 # 課題1
 
-[fake-data-20180418.csv](data/fake-data-20180418.csv) を使い、以下を実行しなさい。
+[fake-data-20180418.csv](../data/fake-data-20180418.csv) を使い、以下を実行しなさい。
 
 1. 身長 (height) の平均値、中央値、分散、標準偏差を求めなさい。
 2. 体重 (weight) の平均値、中央値、分散、標準偏差を求めなさい。
@@ -250,9 +250,6 @@ plot(x, y)
 - 氏名（ふりがな付き）と学籍番号を忘れずに書く
 - 2枚以上（片面印刷で2ページ以上または両面印刷で3ページ以上）提出するときは、すべての紙をホチキス等で綴じること
 - **Rマークダウンを使い、RマークダウンからHTMLに出力した結果を印刷した場合は加点する。**
-
-
-
 
 <br>
 <br>
